Untemplatize action kit Result